CDN protocol update

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     </div>
 
 
-    <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.min.js"></script>
     <script src="js/main.js"></script>
 
 
