--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
     <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.min.js"></script>
+    <script src="js/chart.min.js"></script>
     <script src="js/main.js"></script>
 
 
